<resources>
    <string name="app_name">Foody Restaurant</string>
    <string name="timetable">Timetable</string>
    <string name="opening_time">Select opening time</string>
    <string name="closing_time">Select closing time</string>
    <string name="delete_photo">Delete photo</string>
    <string name="placeholder_price">0,00 €</string>
    <string name="delivery_price">Delivery price</string>
    <string name="food_type">Select cuisines (max. 3)</string>
    <string name="food_type_unselect"> </string>
    <string name="value">$</string>
    <string name="max_cuisine">Maximum 3 cuisines</string>
    <string name="alert_dialog_new_card_title">Insert new course\'s name</string>
    <string name="alert_dialog_error_card_name">There is already a course with that name</string>

    <string-array name="foodcategory_array">
        <item>American</item>
        <item>Brazilian</item>
        <item>Chinese</item>
        <item>Korean</item>
        <item>Crepes</item>
        <item>Desserts</item>
        <item>Fried</item>
        <item>Japanese</item>
        <item>Gluten Free</item>
        <item>Greek</item>
        <item>Hamburger</item>
        <item>Indian</item>
        <item>Kebab</item>
        <item>Middle East</item>
        <item>Mediterranean</item>
        <item>Mexican</item>
        <item>Noodle</item>
        <item>Pasta and Rice</item>
        <item>Wraps</item>
        <item>Pizza</item>
        <item>Fry Shop</item>
        <item>Steakhouse</item>
        <item>Thai</item>
        <item>Vegan</item>
        <item>Vegetarian</item>
        <item>Soups</item>
    </string-array>

    <string name="alert_dialog_choose_food">"Choose max. 3 cuisine"</string>

    <string name="okButton">OK</string>
    <string name="edit">Edit %1$s</string>
    <string name="menu">Menu</string>
    <string name="profile">Profile</string>
    <string name="edit_menu">Edit Menu</string>
    <string name="orders">Kitchen</string>
    <string name="biker_deliv">Delivery</string>
    <string name="history_orders">History</string>
    <string name="title_edit">Title</string>
    <string name="dish_edit">Dish Name</string>
    <string name="desc_edit">Dish Description</string>
    <string name="price_edit">Price</string>

    <string name="notesPlaceholder">Notes:</string>
    <string name="additional">Additional info:</string>
    <string name="idRes" translatable="false">ID:</string>
    <string name="noSave">Your data has been already saved</string>
    <string name="delete">Delete</string>

    <string name="pending_orders">Pending Orders</string>
    <string name="doing_orders">Doing Orders</string>

    <string name="suggestion_checkout">To checkout this order, confirm that the biker took it
    in the Deliveries Tab</string>

    <string name="biker_choose">Biker Choice</string>
    <string name="biker_wait">Biker Waiting</string>

    <string name="choose_biker">Choose Biker</string>

    <string name="phone_number">PHONE NUMBER</string>
    <string name="distance">DISTANCE</string>

    <string name="choose">CHOOSE</string>

    <string name="waiting_biker">WAITING ACCEPT</string>
    <string name="call_biker">CALL BIKER</string>

    <string name="order_delivered">ORDER DELIVERED</string>

    <string name="orders_history">Orders History</string>

    <string name="db_error_message">DB error connection!</string>
    <string name="your_reviews">Your reviews</string>
</resources>
