<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu"
        android:icon="@drawable/menu_black"
        android:title="@string/menu" />
    <item
        android:id="@+id/orders"
        android:icon="@drawable/reserv_black"
        android:title="@string/orders" />

    <item
        android:id="@+id/delivery_biker"
        android:icon="@drawable/biker_black"
        android:title="@string/biker_deliv"
        />

    <item
        android:id="@+id/prof"
        android:icon="@drawable/name_black"
        android:title="@string/profile"
        />

    <item
        android:id="@+id/orders_done"
        android:icon="@drawable/history_black"
        android:title="@string/history_orders" />
</menu>