<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/food_image"
        android:layout_width="86dp"
        android:layout_height="73dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:paddingEnd="13dp"
        android:src="@drawable/profile_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/price_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/food_title_layout" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/food_title_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        app:boxCornerRadiusBottomEnd="9dp"
        app:boxCornerRadiusBottomStart="9dp"
        app:boxCornerRadiusTopEnd="9dp"
        app:boxCornerRadiusTopStart="9dp"
        app:layout_constraintStart_toEndOf="@id/food_image"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/food_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_marginTop="23dp"
            android:hint="@string/dish_edit"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/food_subtitle_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:boxCornerRadiusBottomEnd="9dp"
        app:boxCornerRadiusBottomStart="9dp"
        app:boxCornerRadiusTopEnd="9dp"
        app:boxCornerRadiusTopStart="9dp"
        app:layout_constraintStart_toEndOf="@id/food_image"
        app:layout_constraintTop_toBottomOf="@id/food_title_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/food_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_marginTop="23dp"
            android:hint="@string/desc_edit"
            android:inputType="textMultiLine"
            android:textSize="14sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/price_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:boxCornerRadiusBottomEnd="9dp"
        app:boxCornerRadiusBottomStart="9dp"
        app:boxCornerRadiusTopEnd="9dp"
        app:boxCornerRadiusTopStart="9dp"
        app:layout_constraintStart_toEndOf="@id/food_image"
        app:layout_constraintTop_toBottomOf="@id/food_subtitle_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:padding="7dp"
            android:layout_marginTop="23dp"
            android:hint="@string/price_edit"
            android:inputType="numberDecimal"
            android:textSize="14sp" />



    </android.support.design.widget.TextInputLayout>


    <android.support.design.button.MaterialButton
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        app:icon="@drawable/delete_red"
        android:drawableTint="@color/errorColor"
        app:iconSize="12dp"
        android:textColor="@color/errorColor"
        android:text="Delete"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@id/food_title_layout"
        app:layout_constraintBottom_toTopOf="@id/separator"
        app:iconGravity="textStart"
        android:backgroundTint="@android:color/transparent"/>


    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="6.5dp"
        android:alpha="0.2"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/price_layout"/>


</android.support.constraint.ConstraintLayout>